--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -7,7 +7,7 @@
   description: A website to check whether there will be space in some place.
 
 - title: Acorn
-  url: https://github.com/thomasleese/acorn-lang
+  url: https://github.com/thomasleese/acorn
   description: An attempt at a new LLVM/C++ programming language.
   
 - title: M-O
