--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -2,18 +2,34 @@
   url: https://github.com/thomasleese/acorn
   description: An attempt at a new LLVM/C++ programming language.
 
+- name: DfE Apply for Qualified Teacher Status
+  url: https://github.com/DFE-Digital/apply-for-qualified-teacher-status
+  description: A service that allows international teachers to apply for qualified teacher status (QTS) in England.
+
 - name: Fetch Decode Execute
   url: https://github.com/thomasleese/fde
   description: An educational tool for demonstrating the Fetch-Decode-Execute cycle.
 
-- name: M-O
-  url: https://github.com/thomasleese/mo
-  description: Incredibly simple YAML-based task runner.
+- name: GOV.UK Email Alert API
+  url: https://github.com/alphagov/email-alert-api
+  description: Sends email alerts to the public for GOV.UK.
+
+- name: GOV.UK Publishing API
+  url: https://github.com/alphagov/publishing-api
+  description: API to publish content on GOV.UK.
+
+- name: HMPPS Book a Secure Move API
+  url: https://github.com/ministryofjustice/hmpps-book-secure-move-api
+  description: The backend API for the Book a Secure Move platform.
 
 - name: Rural & Rustic
   url: https://www.rural-and-rustic.wales
-  description: Website development.
+  description: Shepherd’s hut holiday home.
 
 - name: Solar System Clock
   url: https://github.com/thomasleese/solar-system-clock
   description: A clock inspired by Van Cleef & Arpels Midnight Planétarium watch.
+
+- name: Student Robotics
+  url: https://studentrobotics.org
+  description: An annual robotics competition for young people ages 16-19.
