Update projects and employments

--- a/_data/employments.yaml
+++ b/_data/employments.yaml
@@ -1,6 +1,10 @@
+- name: National Health Service (NHS)
+  url: https://digital.nhs.uk/
+  description: July 2024 — Present
+
 - name: Department of Education
   url: https://dfedigital.blog.gov.uk
-  description: May 2022 — Present
+  description: May 2022 — July 2024
 
 - name: Ministry of Justice
   url: https://mojdigital.blog.gov.uk
