--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -1,10 +1,10 @@
-- name: Acorn
-  url: https://github.com/thomasleese/acorn
-  description: An experiment in building a LLVM/C++ programming language.
-
 - name: Apply for Qualified Teacher Status
   url: https://github.com/DFE-Digital/apply-for-qualified-teacher-status
   description: A service for international teachers to apply for qualified teacher status in England.
+
+- name: Dot files
+  url: https://github.com/thomasleese/dotfiles
+  description: Configuration for CLI tools I use.
 
 - name: Fetch Decode Execute
   url: https://github.com/thomasleese/fde
@@ -21,6 +21,10 @@
 - name: HMPPS Book a Secure Move API
   url: https://github.com/ministryofjustice/hmpps-book-secure-move-api
   description: The backend API for the Book a Secure Move platform.
+
+- name: Manage vaccinations in schools (Mavis)
+  url: https://github.com/nhsuk/manage-vaccinations-in-schools
+  description: This is a service used within the NHS for managing and recording school-aged vaccinations.
 
 - name: Rural & Rustic
   url: https://www.rural-and-rustic.wales
