--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -1,39 +1,17 @@
 - name: Apply for Qualified Teacher Status
   url: https://github.com/DFE-Digital/apply-for-qualified-teacher-status
-  description: A service for international teachers to apply for qualified teacher status in England.
 
 - name: Dot files
   url: https://github.com/thomasleese/dotfiles
-  description: Configuration for CLI tools I use.
 
-- name: Fetch Decode Execute
-  url: https://github.com/thomasleese/fde
-  description: An educational tool for demonstrating the Fetch-Decode-Execute cycle.
+- name: GOV.UK
+  url: https://github.com/alphagov
 
-- name: GOV.UK Email Alert API
-  url: https://github.com/alphagov/email-alert-api
-  description: Sends email alerts to the public for GOV.UK.
-
-- name: GOV.UK Publishing API
-  url: https://github.com/alphagov/publishing-api
-  description: API to publish content on GOV.UK.
-
-- name: HMPPS Book a Secure Move API
+- name: Book a secure move
   url: https://github.com/ministryofjustice/hmpps-book-secure-move-api
-  description: The backend API for the Book a Secure Move platform.
 
-- name: Manage vaccinations in schools (Mavis)
+- name: Manage vaccinations in schools
   url: https://github.com/nhsuk/manage-vaccinations-in-schools
-  description: This is a service used within the NHS for managing and recording school-aged vaccinations.
 
 - name: Rural & Rustic
   url: https://www.rural-and-rustic.wales
-  description: Shepherd’s hut holiday home.
-
-- name: Solar System Clock
-  url: https://github.com/thomasleese/solar-system-clock
-  description: A clock inspired by Van Cleef & Arpels Midnight Planétarium watch.
-
-- name: Student Robotics
-  url: https://studentrobotics.org
-  description: An annual robotics competition for young people ages 16-19.
