--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -1,17 +1,39 @@
 - name: Apply for Qualified Teacher Status
   url: https://github.com/DFE-Digital/apply-for-qualified-teacher-status
+  description: A service available to international teachers to apply for qualified teacher status in England and Wales.
 
 - name: Dot files
   url: https://github.com/thomasleese/dotfiles
+  description: A set of configuration files for command line tools I use.
 
-- name: GOV.UK
-  url: https://github.com/alphagov
+- name: Fetch Decode Execute
+  url: https://github.com/thomasleese/fde
+  description: An educational tool for demonstrating the Fetch-Decode-Execute cycle.
 
-- name: Book a secure move
+- name: GOV.UK Email Alert API
+  url: https://github.com/alphagov/email-alert-api
+  description: An API used to send email alerts to the public for changes to pages on GOV.UK.
+
+- name: GOV.UK Publishing API
+  url: https://github.com/alphagov/publishing-api
+  description: An API used to publish and manage content published on GOV.UK.
+
+- name: HMPPS Book a Secure Move API
   url: https://github.com/ministryofjustice/hmpps-book-secure-move-api
+  description: An API used to manage the Book a Secure Move platform used by HMPPS.
 
 - name: Manage vaccinations in schools
   url: https://github.com/nhsuk/manage-vaccinations-in-schools
+  description: A service used within the NHS for managing and recording school-aged vaccinations.
 
 - name: Rural & Rustic
   url: https://www.rural-and-rustic.wales
+  description: A website for a shepherd’s hut holiday home.
+
+- name: Solar System Clock
+  url: https://github.com/thomasleese/solar-system-clock
+  description: A clock inspired by Van Cleef & Arpels Midnight Planétarium watch.
+
+- name: Student Robotics
+  url: https://studentrobotics.org
+  description: An annual robotics competition for young people ages 16-19.
