Update Instagram username

--- a/_data/socials.yaml
+++ b/_data/socials.yaml
@@ -15,5 +15,5 @@
   icon: bluesky
 
 - name: Instagram
-  url: https://www.instagram.com/thomas_leese
+  url: https://www.instagram.com/thomas.leese.io
   icon: instagram
